<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sipeed_tof_ms_a010</name>
  <version>0.3.1</version>
  <description>ROS 2 support for MaixSense-A010 TOF camera</description>
  <maintainer email="slawomir.cielepak@gmail.com">Sławomir Cielepak</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
  </export>
</package>
